cambios 4ta entrega

--- a/funcionamiento.html
+++ b/funcionamiento.html
@@ -21,12 +21,12 @@
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">
                     <img src="images/logo_estoy_con_vos.png" alt="estoy_con_vos" width="40" height="40" class="d-inline-block align-text-top">
-                    Estoy con vos
+                    <h2>Estoy con vos</h2>
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
+                  <div class="collapse navbar-collapse flex justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
                         <a class="nav-link" href="index.html">¿Qué es?</a>
@@ -63,25 +63,22 @@
           </div>
         </main>
         <footer>
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item" style="padding: 10px;">
-                            <a href="https://www.youtube.com/" target="_blank"><img src="images/youtube.png" width="25"></a>
-                        </li>
-                        <li class="nav-item" style="padding: 10px;">
-                            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png" width="25"></a>
-                        </li>
-                        <li class="nav-item" style="padding: 10px;">
-                            <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.png" width="25"></a>
-                        </li>
-                        <li class="nav-item" style="padding: 10px;">
-                            <a href="https://twitter.com/" target="_blank"><img src="images/twitter.png" width="25"></a>
-                        </li>
-                  </ul>
-                </div>
-              </nav>
-            <p>Desarrollado por Jorgelina Perez Villa. 2021</p>
+          <div class="social-media-links">
+            <ul>
+              <li>
+                <a href="https://twitter.com/" target="_blank"><img class="glow" src="images/twitter.png"></a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank"><img class="glow" src="images/youtube.png"></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/" target="_blank"><img class="glow" src="images/facebook.png"></a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/" target="_blank"><img class="glow" src="images/instagram.png"></a>
+              </li>
+            </ul>
+          </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
