--- a/testimonios.html
+++ b/testimonios.html
@@ -22,12 +22,12 @@
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#">
                     <img src="images/logo_estoy_con_vos.png" alt="estoy_con_vos" width="40" height="40" class="d-inline-block align-text-top">
-                    Estoy con vos
+                    <h2>Estoy con vos</h2>
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
+                  <div class="collapse navbar-collapse flex justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
                         <a class="nav-link" href="index.html">¿Qué es?</a>
@@ -62,30 +62,30 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img src="images/image3.jpg" alt="testimonios_exito" class="d-block w-100">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-block testimonio">
                           <h5>¡Encontré una familia sin buscarla!</h5>
-                          <p>Por coincidencia del destino me crucé con Antonio, y desde ese momento tuvimos una química familiar instantánea. Lucía, CABA.</p>
+                          <p>Lucía, CABA.</p>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <img src="images/image5.jpg" class="d-block w-100" alt="nietos">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Abuelos terciarizados</h5>
-                          <p>Mi hijo tiene nuevos abuelos, los ama y disfruta jugar con ellos. Carla, Ciudad de Córdoba.</p>
+                        <div class="carousel-caption d-block testimonio">
+                          <h5>Mi hijo tiene nuevos abuelos, los ama y disfruta jugar con ellos. </h5>
+                          <p>Carla, Ciudad de Córdoba.</p>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <img src="images/image6.jpg" class="d-block w-100" alt="millenial">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Soy una abuela de corazón millenial</h5>
-                          <p>He conocido a muchos jóvenes gracias a este programa; todos igual de amorosos y con muchas aventuras por contar. Elvira, Ciudad de Mendoza.</p>
+                        <div class="carousel-caption d-block testimonio">
+                          <h5>Confirmo, ¡Soy una abuela de corazón millenial!</h5>
+                          <p>Elvira, Ciudad de Mendoza.</p>
                         </div>
                       </div>
                       <div class="carousel-item">
                         <img src="images/image7.jpg" class="d-block w-100" alt="descubrimiento">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-block testimonio">
                           <h5>Me siento más joven que nunca.</h5>
-                          <p>Cuando pensaba que llegaba mi retiro de jubilación, me imaginaba todo el día en casa. En cambio todas las semanas tengo nuevas actividades a las cuales siempre voy acompañado de diferentes y divertidas personas. Osvaldo, Provincia de Tucumán.</p>
+                          <p>Osvaldo, Provincia de Tucumán.</p>
                         </div>
                       </div>
                     </div>
@@ -101,26 +101,23 @@
             </div>
         </main>
         <footer>
-          <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item" style="padding: 10px;">
-                  <a href="https://www.youtube.com/" target="_blank"><img src="images/youtube.png" width="25"></a>
-                </li>
-                <li class="nav-item" style="padding: 10px;">
-                  <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png" width="25"></a>
-                </li>
-                <li class="nav-item" style="padding: 10px;">
-                  <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.png" width="25"></a>
-                </li>
-                <li class="nav-item" style="padding: 10px;">
-                  <a href="https://twitter.com/" target="_blank"><img src="images/twitter.png" width="25"></a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        <p>Desarrollado por Jorgelina Perez Villa. 2021</p>
-      </footer>
+          <div class="social-media-links">
+            <ul>
+              <li>
+                <a href="https://twitter.com/" target="_blank"><img class="glow" src="images/twitter.png"></a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank"><img class="glow" src="images/youtube.png"></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/" target="_blank"><img class="glow" src="images/facebook.png"></a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/" target="_blank"><img class="glow" src="images/instagram.png"></a>
+              </li>
+            </ul>
+          </div>
+        </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
 </html>
