--- a/index.html
+++ b/index.html
@@ -16,50 +16,50 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     </head>
     <body>
-        <header>
-            <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">
-                    <img src="images/logo_estoy_con_vos.png" alt="estoy_con_vos" width="40" height="40" class="d-inline-block align-text-top">
-                    Estoy con vos
-                  </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">¿Qué es?</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="funcionamiento.html">¿Cómo funciona?</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="testimonios.html">Testimonios</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="participar.html">¡Quiero ser parte!</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-            </nav>
+      <header>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="images/logo_estoy_con_vos.png" alt="estoy_con_vos" width="40" height="40" class="d-inline-block align-text-top">
+                <h2>Estoy con vos</h2>
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse flex justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">¿Qué es?</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="funcionamiento.html">¿Cómo funciona?</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="testimonios.html">Testimonios</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="participar.html">¡Quiero ser parte!</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </nav>
         </header>
         <main>
           <img src="images/image1.jpg" class="foto_principal" alt="abuelo">
           <div class="container">
             <div class="row">
               <div class="col-12"><h1>¿Qué es "Estoy con vos"?</h1></div>
-              <div class="col-3">
+              <div class="col-3 d-none d-md-block">
                 <img src="images/logo_estoy_con_vos.png" alt="" width="100" height="100" class="img-thumbnail">
               </div>
               <div class="col-9">
                 <section> 
                   <p><span class="marca">Estoy con vos</span> es una propuesta pensada para adultos mayores y personas con capacidades diferentes que necesiten de un momento de compañía; tanto sea para ir al doc, al parque a caminar, compartir un café, ¡y tantas cosas más que la vida puede ofrecernos!<br>
-                  Los voluntarios que deseen ser parte y acompañarlos serán cuidadosamente entrevistados y evaluados para garantizar la seguridad y cuidado quienes eligen compañía.</p>
+                  Los voluntarios que deseen ser parte y acompañarlos serán cuidadosamente entrevistados y evaluados para garantizar la seguridad y cuidado de quienes eligen compañía.</p>
                 </section>
               </div>
             </div>
@@ -100,26 +100,23 @@
               </div>
             </div>
         </main>
-        <footer id="foot">
-            <nav class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item" style="padding: 10px;">
-                            <a href="https://www.youtube.com/" target="_blank"><img src="images/youtube.png" width="25"></a>
-                        </li>
-                        <li class="nav-item" style="padding: 10px;">
-                            <a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.png" width="25"></a>
-                        </li>
-                        <li class="nav-item" style="padding: 10px;">
-                            <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.png" width="25"></a>
-                        </li>
-                        <li class="nav-item" style="padding: 10px;">
-                            <a href="https://twitter.com/" target="_blank"><img src="images/twitter.png" width="25"></a>
-                        </li>
-                  </ul>
-                </div>
-              </nav>
-            <p>Desarrollado por Jorgelina Perez Villa. 2021</p>
+        <footer>
+          <div class="social-media-links">
+            <ul>
+              <li>
+                <a href="https://twitter.com/" target="_blank"><img class="glow" src="images/twitter.png"></a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank"><img class="glow" src="images/youtube.png"></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/" target="_blank"><img class="glow" src="images/facebook.png"></a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/" target="_blank"><img class="glow" src="images/instagram.png"></a>
+              </li>
+            </ul>
+          </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
