--- a/contacto.html
+++ b/contacto.html
@@ -14,6 +14,7 @@
       <link rel="stylesheet" href="css/estilos.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="images/estoy_con_vos.ico" rel="shortcut icon" type="image/x-icon"/>
     </head>
     <body>
         <header>
