--- a/index.html
+++ b/index.html
@@ -1,124 +1,139 @@
 <!doctype html>
 <html lang="en">
-    <head>
-      <!-- Required meta tags -->
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Buscamos corazones voluntarios con capacidad de amar y acompañar sin importar edades, distancias ni profesión.">
-      <meta name="keywords" content="compañía, voluntariado, adultos mayores, capacidades diferentes">
-      <title>Estoy con vos - Acompañamiento Voluntario</title>
 
-      <!-- Bootstrap CSS -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-      <link rel="stylesheet" href="css/estilos.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="images/estoy_con_vos.ico" rel="shortcut icon" type="image/x-icon"/>
-    </head>
-    <body>
-      <header>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <img src="images/logo_estoy_con_vos.png" alt="estoy_con_vos" width="40" height="40" class="d-inline-block align-text-top">
-                <h2>Estoy con vos</h2>
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse flex justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">¿Qué es?</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="funcionamiento.html">¿Cómo funciona?</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="testimonios.html">Testimonios</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="participar.html">¡Quiero ser parte!</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-        </nav>
-        </header>
-        <main>
-          <img src="images/image1.jpg" class="foto_principal" alt="abuelo">
-          <div class="container">
-            <div class="row">
-              <div class="col-12"><h1>¿Qué es "Estoy con vos"?</h1></div>
-              <div class="col-3 d-none d-md-block">
-                <img src="images/logo_estoy_con_vos.png" alt="" width="100" height="100" class="img-thumbnail">
-              </div>
-              <div class="col-9">
-                <section> 
-                  <p><span class="marca">Estoy con vos</span> es una propuesta pensada para adultos mayores y personas con capacidades diferentes que necesiten de un momento de compañía; tanto sea para ir al doc, al parque a caminar, compartir un café, ¡y tantas cosas más que la vida puede ofrecernos!<br>
-                  Los voluntarios que deseen ser parte y acompañarlos serán cuidadosamente entrevistados y evaluados para garantizar la seguridad y cuidado de quienes eligen compañía.</p>
-                </section>
-              </div>
-            </div>
-            <h2>Beneficios</h2>
-              <div class="row row-cols-1 row-cols-md-2 g-4">
-                <div class="col">
-                  <div class="card icon_index">
-                    <div class="card-body">
-                      <h5 class="card-title"><i class="fi fi-rr-hand-holding-heart"></i>Amor</h5>
-                      <p class="card-text">Llena tu alma de amor.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card icon_index">
-                      <div class="card-body">
-                      <h5 class="card-title"><i class="fi fi-rr-badge"></i>Calidad</h5>
-                      <p class="card-text">Invierte en tiempo de calidad.</p>
-                      </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card icon_index">
-                      <div class="card-body">
-                      <h5 class="card-title"><i class="fi fi-rr-kite"></i>Diversión</h5>
-                      <p class="card-text">¡Compartirás conocimiento y tendrás anécdotas garantizadas!</p>
-                      </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card icon_index">
-                      <div class="card-body">
-                      <h5 class="card-title"><i class="fi fi-rr-laugh"></i>Felicidad</h5>
-                      <p class="card-text">Tu presencia y compañía hace feliz a otra persona.</p>
-                      </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-        </main>
-        <footer>
-          <div class="social-media-links">
-            <ul>
-              <li>
-                <a href="https://twitter.com/" target="_blank"><img class="glow" src="images/twitter.png"></a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com/" target="_blank"><img class="glow" src="images/youtube.png"></a>
-              </li>
-              <li>
-                <a href="https://www.facebook.com/" target="_blank"><img class="glow" src="images/facebook.png"></a>
-              </li>
-              <li>
-                <a href="https://www.instagram.com/" target="_blank"><img class="glow" src="images/instagram.png"></a>
-              </li>
-            </ul>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description"
+    content="Buscamos corazones voluntarios con capacidad de amar y acompañar sin importar edades, distancias ni profesión.">
+  <meta name="keywords" content="compañía, voluntariado, adultos mayores, capacidades diferentes">
+  <title>Estoy con vos - Acompañamiento Voluntario</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+  <!-- estilos propios -->
+  <link rel="stylesheet" href="css/estilos.css">
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- favicon -->
+  <link href="images/estoy_con_vos.ico" rel="shortcut icon" type="image/x-icon" />
+</head>
+
+<body>
+  <header>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="images/logo_estoy_con_vos.png" alt="estoy_con_vos" width="40" height="40"
+            class="d-inline-block align-text-top">
+          <h2>Estoy con vos</h2>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse flex justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">¿Qué es?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="funcionamiento.html">¿Cómo funciona?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="testimonios.html">Testimonios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="participar.html">¡Quiero ser parte!</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <img src="images/image1.jpg" class="foto_principal" alt="abuelo">
+    <div class="container-fluid-center">
+      <section>
+        <div class="row">
+          <h1>¿Qué es "Estoy con vos"?</h1>
+          <div class="col-lg-3 d-none d-md-block">
+            <img src="images/logo_estoy_con_vos.png" alt="" width="100" height="100" class="img-thumbnail">
           </div>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </body>
+          <div class="col-lg-9 col-md-12">
+            <p><span class="marca">Estoy con vos</span> es una propuesta pensada para adultos mayores y personas con
+              capacidades diferentes que necesiten de un momento de compañía; tanto sea para ir al doc, al parque a
+              caminar, compartir un café, ¡y tantas cosas más que la vida puede ofrecernos!<br>
+              Los voluntarios que deseen ser parte y acompañarlos serán cuidadosamente entrevistados y evaluados para
+              garantizar la seguridad y cuidado de quienes eligen compañía.</p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h2>Beneficios</h2>
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+          <div class="col">
+            <div class="card icon_index">
+              <div class="card-body">
+                <h5 class="card-title"><i class="fi fi-rr-hand-holding-heart"></i>Amor</h5>
+                <p class="card-text">Llena tu alma de amor.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card icon_index">
+              <div class="card-body">
+                <h5 class="card-title"><i class="fi fi-rr-badge"></i>Calidad</h5>
+                <p class="card-text">Invierte en tiempo de calidad.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card icon_index">
+              <div class="card-body">
+                <h5 class="card-title"><i class="fi fi-rr-kite"></i>Diversión</h5>
+                <p class="card-text">¡Compartirás conocimiento y tendrás anécdotas garantizadas!</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card icon_index">
+              <div class="card-body">
+                <h5 class="card-title"><i class="fi fi-rr-laugh"></i>Felicidad</h5>
+                <p class="card-text">Tu presencia y compañía hacen feliz a otra persona.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+    </section>
+  </main>
+  <footer>
+    <div class="social-media-links">
+      <ul>
+        <li>
+          <a href="https://twitter.com/" target="_blank"><img class="glow" src="images/twitter.png"></a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/" target="_blank"><img class="glow" src="images/youtube.png"></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/" target="_blank"><img class="glow" src="images/facebook.png"></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/" target="_blank"><img class="glow" src="images/instagram.png"></a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+</body>
 </html>
