--- a/participar.html
+++ b/participar.html
@@ -1,111 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Podés ser voluntario o pedir que alguien te acompañe a hacer tu actividad favorita.">
-        <meta name="keywords" content="inscribíte para participar, sé voluntario, amistad, compañía">
-        <title>Estoy con vos - ¿Cómo ser parte?</title>
 
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-        <link rel="stylesheet" href="css/estilos.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text&display=swap" rel="stylesheet">
-        <link href="images/estoy_con_vos.ico" rel="shortcut icon" type="image/x-icon"/>
-    </head>
-    <body>
-        <header>
-            <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">
-                    <img src="images/logo_estoy_con_vos.png" alt="estoy_con_vos" width="40" height="40" class="d-inline-block align-text-top">
-                    <h2>Estoy con vos</h2>
-                  </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse flex justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link" href="index.html">¿Qué es?</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="funcionamiento.html">¿Cómo funciona?</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="testimonios.html">Testimonios</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="participar.html">¡Quiero ser parte!</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                      </li>
-                    </ul>
-                  </div>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description"
+    content="Podés ser voluntario o pedir que alguien te acompañe a hacer tu actividad favorita.">
+  <meta name="keywords" content="inscribíte para participar, sé voluntario, amistad, compañía">
+  <title>Estoy con vos - ¿Cómo ser parte?</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+  <!-- estilos propios -->
+  <link rel="stylesheet" href="css/estilos.css">
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- favicon -->
+  <link href="images/estoy_con_vos.ico" rel="shortcut icon" type="image/x-icon" />
+</head>
+
+<body>
+  <header>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="images/logo_estoy_con_vos.png" alt="estoy_con_vos" width="40" height="40"
+            class="d-inline-block align-text-top">
+          <h2>Estoy con vos</h2>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse flex justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">¿Qué es?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="funcionamiento.html">¿Cómo funciona?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="testimonios.html">Testimonios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="participar.html">¡Quiero ser parte!</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <h1>¡Quiero ser parte!</h1><br>
+      <div class="container-fluid-center">
+        <div class="row">
+          <div class="col-6 col-md-6">
+            <h3>¿Me acompañas?</h3>
+            <p>¡Inscríbete para poder solicitar compañía cuando lo necesites!</p>
+            <button class="btn btn__primario">
+              Registrarme
+            </button>
+          </div>
+          <div class="col-6 col-md-6">
+            <h3>¡Estoy disponible!</h3>
+            <p>Sé voluntario, recuerda que hay una serie de requisitos por cumplir. Lee atentamente los <a
+                class="showTerminos" data-bs-toggle="modal" data-bs-target="#exampleModal">términos y condiciones</a> al
+              inscribirte.</p>
+            <button class="btn btn__primario">
+              Participar
+            </button>
+          </div>
+          <!-- MODAL -->
+          <div class="modal fade" id="exampleModal" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Términos y Condiciones legales</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-            </nav>
-        </header>
-        <main>
-            <h1>¡Quiero ser parte!</h1><br>
-            <div class="container">
-              <div class="row">
-                <div class="col-6 col-md-6">
-                  <h3>¿Me acompañas?</h3>
-                  <p>¡Inscríbete para poder solicitar compañía cuando lo necesites!</p>
-                  <button class="btn btn__primario">
-                      Registrarme
-                  </button>
+                <div class="modal-body">
+                  <p class="terminos_condiciones">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                    unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
+                    not only five centuries, but also the leap into electronic typesetting, remaining essentially
+                    unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
+                    Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
+                    versions of Lorem Ipsum.</p>
                 </div>
-                <div class="col-6 col-md-6">
-                  <h3>¡Estoy disponible!</h3>
-                  <p>Sé voluntario, recuerda que hay una serie de requisitos por cumplir. Lee atentamente los <a class="showTerminos" data-bs-toggle="modal" data-bs-target="#exampleModal">términos y condiciones</a> al inscribirte.</p>
-                  <button class="btn btn__primario">
-                      Participar
-                  </button>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Acepto</button>
                 </div>
-                <!-- MODAL -->
-                <div class="modal fade" id="exampleModal" tabindex="1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                  <div class="modal-dialog">
-                      <div class="modal-content">
-                          <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">Términos y Condiciones legales</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                          </div>
-                          <div class="modal-body">
-                            <p class="terminos_condiciones">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                          </div>
-                          <div class="modal-footer">
-                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Acepto</button>
-                          </div>
-                      </div>
-                  </div>
-              </div>
               </div>
             </div>
-        </main>
-        <footer>
-          <div class="social-media-links">
-            <ul>
-              <li>
-                <a href="https://twitter.com/" target="_blank"><img class="glow" src="images/twitter.png"></a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com/" target="_blank"><img class="glow" src="images/youtube.png"></a>
-              </li>
-              <li>
-                <a href="https://www.facebook.com/" target="_blank"><img class="glow" src="images/facebook.png"></a>
-              </li>
-              <li>
-                <a href="https://www.instagram.com/" target="_blank"><img class="glow" src="images/instagram.png"></a>
-              </li>
-            </ul>
           </div>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </body>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="social-media-links">
+      <ul>
+        <li>
+          <a href="https://twitter.com/" target="_blank"><img class="glow" src="images/twitter.png"></a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/" target="_blank"><img class="glow" src="images/youtube.png"></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/" target="_blank"><img class="glow" src="images/facebook.png"></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/" target="_blank"><img class="glow" src="images/instagram.png"></a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
