--- a/testimonios.html
+++ b/testimonios.html
@@ -1,124 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-      <!-- Required meta tags -->
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="¡Conocé algunos de nuestros casos de éxito!">
-      <meta name="keywords" content="testimonios, argentina, voluntariado, compañía">
-      <title>Estoy con vos - Casos de éxito</title>
 
-      <!-- Bootstrap CSS -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-      <link rel="stylesheet" href="css/estilos.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text&display=swap" rel="stylesheet">
-      <link href="images/estoy_con_vos.ico" rel="shortcut icon" type="image/x-icon"/>
-    </head>
-    <body>
-        <header>
-            <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">
-                    <img src="images/logo_estoy_con_vos.png" alt="estoy_con_vos" width="40" height="40" class="d-inline-block align-text-top">
-                    <h2>Estoy con vos</h2>
-                  </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse flex justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link" href="index.html">¿Qué es?</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="funcionamiento.html">¿Cómo funciona?</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="testimonios.html">Testimonios</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="participar.html">¡Quiero ser parte!</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-            </nav>
-        </header>
-        <main>
-            <div class="container">
-                <h1>Testimonios</h1>
-                <div id="carouselTestimonios" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselTestimonios" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselTestimonios" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselTestimonios" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                      <button type="button" data-bs-target="#carouselTestimonios" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                    </div>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="images/image3.jpg" alt="testimonios_exito" class="d-block w-100">
-                        <div class="carousel-caption d-block testimonio">
-                          <h5>¡Encontré una familia sin buscarla!</h5>
-                          <p>Lucía, CABA.</p>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/image5.jpg" class="d-block w-100" alt="nietos">
-                        <div class="carousel-caption d-block testimonio">
-                          <h5>Mi hijo tiene nuevos abuelos, los ama y disfruta jugar con ellos. </h5>
-                          <p>Carla, Ciudad de Córdoba.</p>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/image6.jpg" class="d-block w-100" alt="millenial">
-                        <div class="carousel-caption d-block testimonio">
-                          <h5>Confirmo, ¡Soy una abuela de corazón millenial!</h5>
-                          <p>Elvira, Ciudad de Mendoza.</p>
-                        </div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/image7.jpg" class="d-block w-100" alt="descubrimiento">
-                        <div class="carousel-caption d-block testimonio">
-                          <h5>Me siento más joven que nunca.</h5>
-                          <p>Osvaldo, Provincia de Tucumán.</p>
-                        </div>
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimonios" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimonios" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-            </div>
-        </main>
-        <footer>
-          <div class="social-media-links">
-            <ul>
-              <li>
-                <a href="https://twitter.com/" target="_blank"><img class="glow" src="images/twitter.png"></a>
-              </li>
-              <li>
-                <a href="https://www.youtube.com/" target="_blank"><img class="glow" src="images/youtube.png"></a>
-              </li>
-              <li>
-                <a href="https://www.facebook.com/" target="_blank"><img class="glow" src="images/facebook.png"></a>
-              </li>
-              <li>
-                <a href="https://www.instagram.com/" target="_blank"><img class="glow" src="images/instagram.png"></a>
-              </li>
-            </ul>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="¡Conocé algunos de nuestros casos de éxito!">
+  <meta name="keywords" content="testimonios, argentina, voluntariado, compañía">
+  <title>Estoy con vos - Casos de éxito</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+  <!-- estilos propios -->
+  <link rel="stylesheet" href="css/estilos.css">
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- favicon -->
+  <link href="images/estoy_con_vos.ico" rel="shortcut icon" type="image/x-icon" />
+</head>
+
+<body>
+  <header>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="images/logo_estoy_con_vos.png" alt="estoy_con_vos" width="40" height="40"
+            class="d-inline-block align-text-top">
+          <h2>Estoy con vos</h2>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse flex justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">¿Qué es?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="funcionamiento.html">¿Cómo funciona?</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="testimonios.html">Testimonios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="participar.html">¡Quiero ser parte!</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <div class="container-fluid-center">
+        <h1>Testimonios</h1>
+        <div id="carouselTestimonios" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselTestimonios" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselTestimonios" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselTestimonios" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselTestimonios" data-bs-slide-to="3"
+              aria-label="Slide 4"></button>
           </div>
-        </footer>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </body>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/image3.jpg" alt="testimonios_exito" class="d-block w-100">
+              <div class="carousel-caption d-block testimonio">
+                <h5>¡Encontré una familia sin buscarla!</h5>
+                <p>Lucía, CABA.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/image5.jpg" class="d-block w-100" alt="nietos">
+              <div class="carousel-caption d-block testimonio">
+                <h5>Mi hijo tiene nuevos abuelos, los ama y disfruta jugar con ellos. </h5>
+                <p>Carla, Ciudad de Córdoba.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/image6.jpg" class="d-block w-100" alt="millenial">
+              <div class="carousel-caption d-block testimonio">
+                <h5>Confirmo, ¡Soy una abuela de corazón millenial!</h5>
+                <p>Elvira, Ciudad de Mendoza.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/image7.jpg" class="d-block w-100" alt="descubrimiento">
+              <div class="carousel-caption d-block testimonio">
+                <h5>Me siento más joven que nunca.</h5>
+                <p>Osvaldo, Provincia de Tucumán.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimonios"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimonios"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        <br><br>
+        <div class="container-fluid-center">
+          <div class="row">
+            <div class="col-6">
+              <img src="images/icecream.jpg" alt="beneficios" class="foto_testimonios">
+            </div>
+            <div class="col-6 testimonio">
+              <h3>¡Sé parte de nuestra comunidad!</h3>
+              <p class="textSection">Maravillosos beneficios, además de cultivar relaciones humanas pronto podrás
+                acceder a
+                beneficios en locales gastronómicos, cines, parques de juegos y más.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div class="social-media-links">
+      <ul>
+        <li>
+          <a href="https://twitter.com/" target="_blank"><img class="glow" src="images/twitter.png"></a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com/" target="_blank"><img class="glow" src="images/youtube.png"></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/" target="_blank"><img class="glow" src="images/facebook.png"></a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/" target="_blank"><img class="glow" src="images/instagram.png"></a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
