cambios generales estetica y contenido

--- a/funcionamiento.html
+++ b/funcionamiento.html
@@ -59,18 +59,24 @@
   </header>
   <main>
     <div class="container-fluid-center">
+      <h1>¡Conocé a fondo la propuesta!</h1>
       <section>
-        <h1>¿Cómo funciona?</h1>
-        <article>
-          <p><span class="marca">Estoy con vos</span> consta de dos partes.</p>
-          <ul class="itemKind">
-            <li>¿Me acompañas?: Incluye a todos los adultos mayores y personas que necesiten de compañía. El objetivo es
-              no dejar solos a quienes más nos necesitan.</li>
-            <li>¡Estoy disponible!: Aquí podrán participar todas las personas que puedan y deseen estar al lado de quién
-              lo necesite. Sin horarios ni compromisos previos. Es tu decisión ser parte y no fallarle a quien te busca.
-            </li>
-          </ul>
-        </article>
+        <p>Un voluntariado siempre es una buena opción para sumar a tu rutina. Aquí te ofrecemos libertad de horarios,
+          flexibilidad acerca de los compromisos a adquirir y lo mejor... ¡No requiere experiencia previa!</p>
+        <div class="flexbox-container">
+          <div>
+            <img src="images/woman.png" alt="amistad" class="funcionamientoPhoto">
+            <h3>¿Cómo funciona?</h3>Incluye a todos los adultos mayores y personas que necesiten de compañía. El
+            objetivo es
+            no dejar solos a quienes más nos necesitan.
+          </div>
+          <div>
+            <img src="images/reading.png" alt="bondad" class="funcionamientoPhoto">
+            <h3>¿Me acompañas?</h3>Aquí podrán participar todas las personas que puedan y deseen estar al lado de quién
+            lo necesite. Sin horarios ni compromisos previos. Es tu decisión ser parte y no decepcionar a quien te
+            busca.
+          </div>
+        </div>
       </section>
     </div>
   </main>
