--- a/contacto.html
+++ b/contacto.html
@@ -60,7 +60,7 @@
     <section>
       <div class="container-fluid-center">
         <div class="row">
-          <div class="col md-12">
+          <div class="col md-12 col-lg-12 col-xl-12">
             <form>
               <h2>Formulario de Contacto</h2>
               <div class="form-group">
