--- a/participar.html
+++ b/participar.html
@@ -59,21 +59,28 @@
   </header>
   <main>
     <section>
-      <h1>¡Quiero ser parte!</h1><br>
+      <div class="col-lg-12 col-xl-12">
+        <img src="images/abrazos.jpg" class="foto_principal" alt="abrazo">
+      </div>
       <div class="container-fluid-center">
-        <div class="row">
-          <div class="col-6 col-md-6">
+        <div class="flexbox-container">
+          <div>
             <h3>¿Me acompañas?</h3>
-            <p>¡Inscríbete para poder solicitar compañía cuando lo necesites!</p>
+            <p>¡Inscríbete para poder solicitar compañía cuando lo necesites!</br></br>
+              Fácil, rápido y seguro. En pocos click podrás crear tu usuario y pedir acompañamiento cada vez que lo
+              necesites.</p>
             <button class="btn btn__primario">
               Registrarme
             </button>
           </div>
-          <div class="col-6 col-md-6">
+          <div>
             <h3>¡Estoy disponible!</h3>
             <p>Sé voluntario, recuerda que hay una serie de requisitos por cumplir. Lee atentamente los <a
                 class="showTerminos" data-bs-toggle="modal" data-bs-target="#exampleModal">términos y condiciones</a> al
-              inscribirte.</p>
+              inscribirte.</br>
+              ¡Animáte a vivir una experiencia de valor! Los voluntariados siempre son bien valorados en diversas
+              actividades como la búsqueda de trabajo; obtención de visas, postulación a becas entre otras.
+            </p>
             <button class="btn btn__primario">
               Participar
             </button>
@@ -87,13 +94,30 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <p class="terminos_condiciones">Lorem Ipsum is simply dummy text of the printing and typesetting
-                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                    unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
-                    not only five centuries, but also the leap into electronic typesetting, remaining essentially
-                    unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-                    Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
-                    versions of Lorem Ipsum.</p>
+                  <p class="terminos_condiciones">Es requisito necesario para la adquisición de los servicios que se
+                    ofrecen en este sitio, que lea y acepte los siguientes Términos y Condiciones que a continuación se
+                    redactan. El uso de nuestros servicios así como la compra de nuestros productos implicará que usted
+                    ha leído y aceptado los Términos y Condiciones de Uso en el presente documento. Todas los productos
+                    que son ofrecidos por nuestro sitio web pudieran ser creadas, cobradas, enviadas o presentadas por
+                    una página web tercera y en tal caso estarían sujetas a sus propios Términos y Condiciones. En
+                    algunos casos, para adquirir un producto, será necesario el registro por parte del usuario, con
+                    ingreso de datos personales fidedignos y definición de una contraseña.
+                    LICENCIA
+                    a través de su sitio web concede una licencia para que los usuarios utilicen los servicios que son
+                    ofrecidos en este sitio web de acuerdo a los Términos y Condiciones que se describen en este
+                    documento.
+                    USO NO AUTORIZADO
+                    En caso de que aplique (para venta de software, templetes, u otro producto de diseño y programación)
+                    usted no puede colocar uno de nuestros productos, modificado o sin modificar, en un CD, sitio web o
+                    ningún otro medio y ofrecerlos para la redistribución o la reventa de ningún tipo.
+                    COMPROBACIÓN ANTIFRAUDE
+                    La participación puede ser aplazada para la comprobación antifraude. También puede ser
+                    suspendida por más tiempo para una investigación más rigurosa, para evitar transacciones
+                    fraudulentas.
+                    PRIVACIDAD
+                    La suscripción a boletines de correos electrónicos publicitarios es voluntaria y podría ser
+                    seleccionada al momento de crear su cuenta.
+                  </p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Acepto</button>
