--- a/contacto.html
+++ b/contacto.html
@@ -59,7 +59,7 @@
   <main>
     <section>
       <div class="container-fluid-center">
-        <div class="row">
+        <div class="row px-5">
           <div class="col md-12 col-lg-12 col-xl-12">
             <form>
               <h2>Formulario de Contacto</h2>
